slider fixes; more spacing on subfeatures

--- a/components/sass/_styles_header.scss
+++ b/components/sass/_styles_header.scss
@@ -1,5 +1,8 @@
 #header {
-    background-color: $color-header-bg;
+    //background-color: $color-header-bg;
+    position: relative;
+    margin-top: -40px;
+    background-color: rgb(242,242,232);
     width: 100%;
     padding: 0;
     * {
@@ -45,10 +48,11 @@ button#searchformboxgo {
 }
 .sitelogo {
     position: relative;
-    width: 150px;
-    padding-left:10px;
-    top: -40px;
+    width: 120px;
+    padding-left:30px;
+    //top: -40px;
     z-index: 4;
+    padding-bottom:10px;
     float:left;
 }
 #header-tools {
